--- a/style.css
+++ b/style.css
@@ -8,4 +8,67 @@
 body{
     background: #080808;
     color: #fff;
+
+}
+
+
+#header{
+
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/background.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.Container{
+    padding: 10px 10%;
+}
+
+
+nav{
+    display: flex;
+    align-self: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo{
+    height: 200px;
+    width: 140px;
+}
+
+nav ul li{
+
+    margin: 10px 20px;
+    list-style: none;
+    display: inline-block;
+
+}
+
+
+nav ul li a{
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+    position: relative;
+
+
+}
+
+nav ul li a:after{
+    content: '';
+    width: 0px;
+    height: 3px;
+    background:#ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+
+}
+
+
+nav ul li a:hover::after{
+    width: 100%;
 }
