--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body{
 }
 
 
-#header{
+#header{ 
 
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    /* background-image: url(images/background.png); */
     background-size: cover;
     background-position: center;
 }
@@ -71,4 +71,143 @@ nav ul li a:after{
 
 nav ul li a:hover::after{
     width: 100%;
+}
+
+
+.header-text{
+    margin-top: 20%;
+font-size: 30px;
+
+}
+
+.header-text h1{
+    font-size: 60px;
+    margin-top: 20px;
+
+}
+
+.header-text h1 span{
+    color: #ff004f;
+}
+
+
+/* --------About-------> */
+
+
+#about{
+    padding: 80px 0;
+    color: #ababab;
+
+}
+
+.row{
+    display:  flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+
+
+}
+.about-col-1{
+    flex-basis: 35%;
+
+}
+about-col-1 img{
+    width: 100%;
+    border-radius: 15%;
+     
+}
+
+
+.about-col-2{
+    flex-basis: 60%;
+
+}
+
+
+
+.Sub-title{
+
+    font-size: 60px;
+    font-weight: 600;
+    color: #ffff;
+    
+}
+
+.tab-titles{
+    display: flex;
+    margin: 20px 0 40px;
+}
+
+
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+
+
+}
+
+
+.tab-links ::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5;
+
+
+}
+
+.tab-links.active-link::after{
+
+    width: 50px;
+
+
+}
+
+.tab-content ul li{
+    list-style: none;
+    margin: 10px 0;
+
+}
+
+.tab-contents ul li span{
+    color: #b54769;
+    font-size: 14px;
+}
+
+
+.tab-contents{
+    display: none;
+
+}
+
+
+.tab-contents.active-tab{
+    display: block;
+    
+}
+
+
+/* --------SERVICES------- */
+
+
+#services{
+    padding: 30px 0;
+
+}
+
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+
+grid-gap: 40px;
+margin-top: 50px;
+
 }
