--- a/style.css
+++ b/style.css
@@ -205,9 +205,49 @@ about-col-1 img{
 
 .services-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+   grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
 
 grid-gap: 40px;
 margin-top: 50px;
 
+}
+
+.services-list div{
+    background: #262626;
+    padding: 40px;
+   font-size: 13px;
+    font-weight: 300;
+    border-right: 10px;
+transition: background 0.5s, transform 0.5s;
+}
+
+.services-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+
+}
+
+.services-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+
+}
+
+.services-list div a{
+    color: #ffff;
+    text-decoration: none;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+
+
+
+}
+
+
+.services-list div:hover{
+
+    color: #ff004f;
+    transform: translateY(-10px);
 }
