--- a/style.css
+++ b/style.css
@@ -251,3 +251,74 @@ transition: background 0.5s, transform 0.5s;
     color: #ff004f;
     transform: translateY(-10px);
 }
+
+
+/* ----------PORTOLIO----------- */
+
+
+
+#portfolio{
+    padding: 50px 0;
+
+}
+
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+ 
+    grid-gap: 40px;
+    margin-top: 50px;
+ 
+
+}
+
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+
+}
+.work img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+}
+
+.layer{
+    height: 100%;
+    width: 100%;background: linear-gradient(rgba(0,0,0,0.6,#ff004f));
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+
+}
+
+.layer h3{
+    font-weight: 500;
+    margin-bottom: 20px;
+
+}
+.layer a{
+    margin-top: 20px;
+   color: #ff004f;
+   text-decoration: none;
+   font-size: 18px;
+   line-height: 60px;
+   background: #fff;
+height: 60px;
+
+   width: 60px;
+
+   text-align: center;
+   border-radius: 50%;
+   
+}
