--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@
 body{
     background: #080808;
     color: #fff;
-
-}
+  
+  }
 
 
 #header{ 
 
     width: 100%;
     height: 100vh;
-    /* background-image: url(images/background.png); */
+     background-image: url(images/se.jpg); 
     background-size: cover;
     background-position: center;
 }
